--- a/website/home.html
+++ b/website/home.html
@@ -91,13 +91,15 @@ feel free to look around for any help you need :) just don't be THAT person and 
 
 			<p>here's my <a class="outlink" href="https://doqmeat.123guestbook.com/">guestbook</a> if you'd like to write a little message <img src="!g/pix/cat-heart.gif"> every single message means a ton to me!</p>
 
-			<p>this website will probably be an <a title="github issues" href="https://github.com/doqmeat/doqmeat.neocities.org/issues" target="_blank" class="outlink">endless work-in-progress</a> for quite a bit. meaning that i am <b>always</b> working on it and updating it. if anything looks broken, a quick cache clean should help! if not, then feel free to e-mail me.</p>
+			<p>this website will probably be an <a title="github issues" href="https://github.com/doqmeat/doqmeat.neocities.org/issues" target="_blank" class="outlink">endless work-in-progress</a> for quite a bit. meaning that i am <b>always</b> working on it and updating it. if anything looks broken, a quick cache clean should help! if not, then feel free to <a href="mailto:doqmeat@gmail.com">e-mail</a> me.</p>
 
 			<center><a href="https://user.xmission.com/~emailbox/catstuff.htm" title="img source!"><img src="/collection/internet-stamps/!g/timecat.png" alt="button that reads 'no time spent with a cat is wasted'" width="30%"></a></center>
 
 			<h4>notes:</h4>
-			<li>recommended to view on a 1536+px wide screen.</li>
-			<li>i've made <i>most</i> of the pages on this site responsive to different screen sizes. with that said, it is <b>not tested or recommended to view on mobile devices</b>.</li>
+			<li>pages can be <b>IMG heavy</b> <small>you might need to reload twice in order for everything to load. <small>sorry...</small></small></li>
+			<li>recommended to view on a 1536px+ wide screen <i>but</i> most pages are responsive to your screen size :)</li>
+			<li>website uses <b>javascript</b> <small>(some pages might not work correctly without it)</small></li>
+			<li><b>not tested or recommended to view on mobile devices</b> though it should be viewable at least</li>
 		</div>
 
 		<div id="status" class="box;">
@@ -118,18 +120,19 @@ feel free to look around for any help you need :) just don't be THAT person and 
 
 		<div id="current" class="box">
 			<h2>currently...</h2>
-			<p><span class="hl">playing:</span> paranormasight, <a href="/vgs/a-little-to-the-left">a little to the left</a></p>
+			<p><span class="hl">playing:</span> <a href="/vgs/paranormasight">paranormasight</a>, <a href="/vgs/prsk">project sekai</a></p>
 			<p><span class="hl">reading:</span> <i>the guy she was interested in wasn't a guy at all</i> by sumiko arai, <i>chainsaw man</i> by tatsuki
 				fujimoto</p>
-			<p><span class="hl">watching:</span> the same 5 blu-rays i own over and over again</p>
+			<p><span class="hl">watching:</span> dungeon meshi</p>
 			<p><span class="hl">listening to:</span> <span id="song">&#8987;</span></p>
 			<p><span class="hl">working on:</span> my apartment (‾◡◝) also studying</p>
 			<p><span class="hl">coding/writing:</span> journal and planners blog post</p>
-			<p class="date">last updated on 17.mar.24</p>
+			<p class="date">last updated on 23.mar.24</p>
 		</div>
 
 		<div id="updates" class="box">
 			<h2>updates</h2>
+			<li>23.mar.24 - new journal log: <a href="/journal">warmth</a> + updated <a href="/photobook">photobook</a> and featured cat</li>
 			<li>21.mar.24 - updated <a href="/vgs">gaming log</a> with <i>paranormasight</i> and other logs, and <a href="/scrapbook/2024#mar">march scrapbook!</a></li>
 			<li>17.mar.24 - big update to <a href="/music/listening-log/2024/winter.html">listening log</a> before winter ends officially!</li>
 			<li>11.mar.24 - <a href="/scrapbook/2024#mar">march</a> scrapbook page created!</li>
@@ -141,7 +144,7 @@ feel free to look around for any help you need :) just don't be THAT person and 
 
 		<div id="featured-cat" class="box">
 			<h2>featured cat</h2>
-			<a href="/collection/cats/!g/stupid-tiger.jpg" target="_blank"><img src="/collection/cats/!g/stupid-tiger.jpg" width="90%" alt="featured cat, its a stupid ass looking tiger"></a>
+			<a title="click me to see more freaks" href="/collection/cats" target="_blank"><img src="/collection/cats/!g/blub-meow.jpg" width="90%" alt="featured cat, its a fish with a cat's face photoshopped into it"></a>
 		</div>
 
 		<div id="listing" class="box">
