--- a/website/collection/cats/index.html
+++ b/website/collection/cats/index.html
@@ -72,6 +72,7 @@
 
 		<!--column 3-->
 		<div class="column">
+			<img src="!g/blub-meow.jpg" alt="fish cat">
 			<img src="!g/thisgoofyassguy.jpg">
 			<img src="!g/wait-im-jolly.jpeg">
 			<img src="!g/YOUVEBEENJESTERED.jpg">
@@ -102,7 +103,7 @@
 	<footer>
 		<img src="div1.gif" alt=""><img src="div.gif" alt=""><img src="div2.gif" alt="">
 		<br>
-		<b>last updated: 17.feb.24</b>
+		<b>last updated: 23.mar.24</b>
 		<br>
 		<b>credit:</b> page made with materials by <a href="http://tora7.ciao.jp" target="_blank">tora7.ciao.jp</a> / <a href="/notebook/links/fonts.html">fonts</a> used: cat paw
 
