button wall update

--- a/website/sites/index.html
+++ b/website/sites/index.html
@@ -246,6 +246,7 @@
 			<a href="https://shrimpfriedeggs.neocities.org/"><img src="https://shrimpfriedeggs.neocities.org/art/mybutton.gif"></a>
 		</div>
 		<a href="https://mewmiu.blog.fc2.com" target="_blank"><img src="https://blog-imgs-169.fc2.com/m/e/w/mewmiu/stamp.png"></a>
+		<a title="velvet blue" href="https://humanityisnotbeautiful.neocities.org"><img src="https://files.catbox.moe/vltthb.png" alt="Velvet Blue"></a>
 
 		<p><a href="https://neustadt.fr/">neustadt.fr</a></p>
 
