added some color to stickers page

--- a/website/collection/stickers/index.html
+++ b/website/collection/stickers/index.html
@@ -9,14 +9,14 @@ coded with love by des.
 
 	<title>stickers</title>
 
-	<link rel="icon" type="image/x-icon" href="favicon.gif">
+	<link rel="icon" type="image/x-icon" href="/!g/pix/sticky.gif">
 
 	<link href="/fonts/stylesheet.css" rel="stylesheet" type="text/css" media="all">
 	<link href="stickers.css" rel="stylesheet" type="text/css" media="all">
 	<!-- tooltip shit -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.min.js"></script>
 	<script src="/!f/tooltip-jquary.js"></script>
- <script src="/!f/tooltip.js"></script>
+	<script src="/!f/tooltip.js"></script>
 	<!--  end of tooltip shit -->
 
 </head>
@@ -25,9 +25,9 @@ coded with love by des.
 
 	<header>
 		<h1>stickers</h1>
-		<p>i love stickers :3 so i will be sharing here the ones i have scanned! 
-			<br>known artists will be linked on the imgs :)</p>
-		<small>(will be adding CSS some other time)</small>
+		<p>i love stickers :3 so i will be sharing here the ones i have scanned!
+			<br>known artists will be linked on the imgs :)
+		</p>
 	</header>
 
 	<main>
@@ -43,16 +43,18 @@ coded with love by des.
 		<img src="!g/food.jpg">
 
 		<h2>singles</h2>
-  <img src="/!g/deco/hello_kitty.png" title="this is a clothes tag and not a sticker but its so cuteee that i glued it to a notebook. soooo. you are now a sticker.">
+		<img src="/!g/deco/hello_kitty.png" title="this is a clothes tag and not a sticker but its so cuteee that i glued it to a notebook. soooo. you are now a sticker.">
 
 	</main>
- 
- <div id="home">
- <a href="/home">go back home?</a>
- </div>
+
+	<div id="home">
+		<a href="/collection">go back?</a>
+	</div>
 
 	<footer>
-		<a href="#">top</a> / <a href="/home">home</a> / <a href="/collection">collections</a> / <a href="/sitemap">sitemap</a>
+		<b>last updated on ??.???.24</b>
+		<br>
+		<a href="#">top</a> <img src="/!g/pix/sticky.gif" alt=""> <a href="/home">home</a> <img src="/!g/pix/sticky.gif" alt=""> <a href="/collection">collections</a> <img src="/!g/pix/sticky.gif" alt=""> <a href="/sitemap">sitemap</a>
 	</footer>
 
 </body>
