art page tweaks

--- a/website/art/index.html
+++ b/website/art/index.html
@@ -19,31 +19,11 @@ coded with love by des
 	<script src="/!f/tooltip-jquary.js"></script>
 	<script src="/!f/tooltip.js"></script>
 	<!--  end of tooltip shit -->
-	<style>
-		body {
-			margin: auto;
-			max-width: 800px;
-		}
-
-		img {
-			vertical-align: middle;
-		}
-
-		.full {
-			width: 100%;
-		}
-
-		.half {
-			width: 48%;
-		}
-
-	</style>
 </head>
 
 <body>
 	<h1>arts &amp; crafts</h1>
-	<p>a page dedicated to the stuff i've made. idk what's up with me but i only have energy to draw like once per year.</p>
-	<p><small>really hated my previous version of this page DDLFKJF i will eventually upload more stuff to it + CSS but for now this will do. on my to-do list for this page: i wanna figure out how can i make an img pop up as a tooltip... but that's for another time. also add ALT text to art.</small></p>
+	<p>this happens once every year or something but i do a little drawing and other stuff.</p>
 
 	<h2>posts</h2>
 	<p><a href="post/depression-cherry-booklet.html">depression cherry custom booklet</a></p>
