--- a/website/music/info.html
+++ b/website/music/info.html
@@ -11,23 +11,10 @@
 	<link href="/fonts/stylesheet.css" rel="stylesheet" type="text/css" media="all">
 	<link href="body.css" rel="stylesheet" type="text/css" media="all">
 	<link href="frame.css" rel="stylesheet" type="text/css" media="all">
-
 	<!-- tooltip shit -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.min.js"></script>
 	<script src="/!f/tooltip-jquary.js"></script>
-	<script>
-		(function($) {
-			$(document).ready(function() {
-				$("[title]").style_my_tooltips({
-					tip_follows_cursor: true,
-					tip_delay_time: 10,
-					tip_fade_speed: 10,
-					attribute: "title"
-				});
-			});
-		})(jQuery);
-
-	</script>
+	<script src="/!f/tooltip.js"></script>
 	<!--  end of tooltip shit -->
 
 </head>
@@ -35,31 +22,35 @@
 <body>
 	<div id="frame">
 		<h2>info</h2>
-	
-		<p>one of my most precious memories is making lists of songs i wanted my dad to download on my mp3 player when i was little. i think that is a good introduction to this page about my beloved music.</p>
+
+		<p>one of my most precious memories is making lists of songs i wanted my dad to download on my mp3 player when i was little. throughout my entire life, i have always been accompanied by music, it is something deeply important to me.</p>
+		
+		<p>i just wanna have a space where i can talk a lil bit about the stuff i like while also showcasing it as well.</p>
 
 		<p>feel free to send me a recommendation through <a title="doqmeat@gmail.com" href="mailto:doqmeat@gmail.com" target="_blank">e-mail</a>!!! i will gladly listen to it whenever i have some time. i love discovering new music <img src="/!g/pix/catroll.gif"></p>
-		
+
 		<center><img src="/!g/deco/jermamusic.gif"></center>
 
-<h3>other</h3>
+		<h3>other</h3>
 
 		<p>i run the <a href="https://twitter.com/hourlysiinamota" target="_blank">siinamota song bot</a> on twitter! if you're into vocaloid, i recommend checking out siinamota's stuff! i have a <a href="https://sepiarecord.notion.site/sepiarecord/homepage-6242b9a7ce844610bdf2a9187a0a1bfb" target="_blank">siinamota guide</a> on notion <img src="/!g/pix/emote1bubbles.gif"> where you can learn more about him and his music! (while i get his shrine ready...)</p>
-	
-<h3>important dates</h3>
-		
-		<li>2019 - got into kpop</li>
-		<li>2022 - got into vocaloid</li> 
-		<li>16.feb.22 - met yukika on a fancall</li>
-		<li>7.feb.23 - went to my first concert ever! kpop boy group ONEUS</li>
-		
 
-<h3>credit</h3>
-		
+		<h3>important dates</h3>
+
+		<li>got into into kpop around 2019 with loona as my introduction.</li>
+		<li>got into vocaloid around 2022 because of siinamota's music.</li>
+		<li>16.feb.22 - met yukika on a fancall</li>
+		<li>7.feb.23 - went to my first concert ever! it was a kpop boy group: ONEUS</li>
+		<li>21.mar.24 - went to my first orchestra! it was lovely <img src="/!g/pix/hearts-f.gif"></li>
+
+
+		<h3>credit</h3>
+
 		<li><b>body background</b> is a scan from siinamota's <a title="archive.org img link" href="https://archive.org/details/yume-no-manimani-scans/13-page.png" target="_blank">yume no manimani</a> album booklet, art by <a title="meisa's website" href="http://hathune39.web.fc2.com/" target="_blank">meisa</a></li>
-		
+
 	</div>
-	
-<footer><a href="#">top</a> <span class="emoji2"></span> <a href="/music">music</a> <span class="emoji2"></span> <a href="/home">home</a> <span class="emoji2"></span> <a href="/sitemap.html">sitemap</a></footer>
-	</body>
+
+	<footer><a href="#">top</a> <span class="emoji2"></span> <a href="/music">music</a> <span class="emoji2"></span> <a href="/home">home</a> <span class="emoji2"></span> <a href="/sitemap.html">sitemap</a></footer>
+</body>
+
 </html>
