listening log minor fixes

--- a/website/music/listening-log/index.html
+++ b/website/music/listening-log/index.html
@@ -37,8 +37,9 @@
 <body>
 	<div id="frame">
 		<h2>listening logs</h2>
-		<p>sometimes i feel like writing my thoughts on stuff i listen to! these will usually be first time listens but i will mention if it isn't otherwise. <br> a more fleshed out version of my <a href="https://rateyourmusic.com/list/doqmeat/2023-📝🌟/" target="_blank">RYM yearly logs</a></p>
-		<p>these pages will open in the parent window!</p>
+		<p>these will usually be first time listens but i will mention if it isn't otherwise.</p>
+		<p>these logs are basically a more fleshed out version of my <a href="https://rateyourmusic.com/doqmeat" target="_blank">RYM</a> yearly logs</p>
+		<p><b>21.mar.24</b> - i used to do these on a monthly basis, but because i have less free time now i have been sadly listening to less new stuff compared to previously <img src="/!g/pix/sad.gif" alt=""> because of this i will be separating them based on the seasons of the year</p>
 		<h3>pages</h3>
 		<a href="2024/winter.html" target="_parent">winter 2024</a>
 		<a href="2023/12.html" target="_parent">december 2023</a>
@@ -52,9 +53,9 @@
 		<a href="2023/04.html" target="_parent">april 2023</a>
 		<h4>all logs</h4>
 		<details>
-			<summary>if you're looking for a specific album or artist just hit that CTRL + F and search away :D</summary>
+			<summary>if you're looking for a specific album or artist just hit that CTRL + F and search away :D <small>(updated every time i create a new page!)</small></summary>
 			<p><a href="2024/winter.html#5">the time machine school</a> - kinoue64</p>
-			<p><a href="#4">p.h.</a> - seventhlinks</p>
+			<p><a href="2024/winter.html#4">p.h.</a> - seventhlinks</p>
 			<p><a href="2024/winter.html#3">worm in the apple</a> - youra</p>
 			<p><a href="2024/winter.html#2">am i sinking or am i swimming?</a> - late night drive home</p>
 			<p><a href="2024/winter.html#1">나는야 찌질이 (i'm a loser)</a> - hongbi</p>
