website url fixes

--- a/website/about/index.html
+++ b/website/about/index.html
@@ -46,7 +46,7 @@
 
 				<p><a title="art by blackrabbit-25" href="https://www.deviantart.com/blackrabbit-25" target="_blank"><img src="/!g/deco/blackrabbit25-book.gif" align="right" style="margin-top:-25px;"></a>so think of my website as a digital journal. i will share bits and pieces of my personal life, interests, passions, and even creations. <mark>my goal is simply to have a place on the internet where i can freely be myself without the chaos and limitations of social media. and to have fun</mark>, of course :3 i wouldn't be doing any of this if it wasn't fun for me.</p>
 
-				<p>my love for this site has inspired me to pursue college education again, and i'm currently studying computer science <img src="https://doqmeat.neocities.org/!g/pix/emote1m.gif" alt=""></p>
+				<p>my love for this site has inspired me to pursue college education again, and i'm currently studying computer science <img src="/!g/pix/emote1m.gif" alt=""></p>
 
 				<p><img src="/!g/deco/mail.gif" align="left" style="margin-right:15px;">with all that said, i am pretty friendly and love to interact with other people. feel free to e-mail me at <a href="mailto:doqmeat@gmail.com" target="_blank">doqmeat@gmail.com</a> about whatever, really! whether it be to tell me about what you thought about my site, to send me pictures of your cats, recommend me an album you think i might like, or even ask any coding related questions you might have. i might take a bit to answer back but anything goes, thank you very much for reading!</p>
 
