--- a/website/collection/mail-stamps/index.html
+++ b/website/collection/mail-stamps/index.html
@@ -8,7 +8,7 @@ coded with love by des
 	<title>mail stamps</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="icon" type="image/x-icon" href="https://doqmeat.neocities.org/!g/pix/postcard.gif">
+	<link rel="icon" type="image/x-icon" href="/!g/pix/postcard.gif">
 	<link href="/fonts/stylesheet.css" rel="stylesheet" type="text/css" media="all">
 	<link href="mail.css" rel="stylesheet" type="text/css" media="all">
 	<!-- tooltip shit -->
