--- a/website/music/featured.html
+++ b/website/music/featured.html
@@ -152,7 +152,7 @@ iframe2
 				<td class="t-right">
 					<iframe style="border-radius:12px" src="https://open.spotify.com/embed/album/4I3293GUwLNbIbi5xv1XbO?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
 					<p>and talking about breakbeats!!! i recently listened to this album. and wow was this so so so cool. i've been looking for more drum n bass music lately and the album cover of this catched my attention. <br><b>links:</b> <a href="https://turquoisedeath.bandcamp.com/album/se-bueno" target="_blank">bandcamp</a> / <a href="https://youtu.be/PadJz4o_jUM?si=Sb83QsYChU2cmQy8" target="_blank">youtube</a></p>
-					<p><s>more thoughts will be on this month's listening log soon!</s> which you can read right <a href="https://doqmeat.neocities.org/music/2023/0801#7" target="_blank">here</a>!</p>
+					<p><s>more thoughts will be on this month's listening log soon!</s> which you can read right <a href="/music/2023/0801#7" target="_blank">here</a>!</p>
 				</td>
 			</table>
 		</details>
