--- a/website/music/index.html
+++ b/website/music/index.html
@@ -122,13 +122,13 @@
 		</div>
 
 		<div id="fun" class="box">
-			<img src="https://doqmeat.neocities.org/collection/internet-stamps/!g/matry.gif">
-			<a href="https://www.tumblr.com/pileofglass/708541131552669696/made-some-88x31-buttons-for-breakbeat-fans-feel?source=share" target="_blank"><img src="https://doqmeat.neocities.org/collection/internet-stamps/!g/breakbeat.gif"></a>
-			<a href="https://www.tumblr.com/cartoonishvendor/710638657066926080/drippin-themed-88x31-buttons-middle-animation-is?source=share" target="_blank"><img src="https://doqmeat.neocities.org/collection/internet-stamps/!g/drippin.gif"></a>
-			<img src="https://doqmeat.neocities.org/collection/internet-stamps/!g/miku.gif">
-			<a href="https://plasticdino.neocities.org/graphics" target="_blank"><img src="https://doqmeat.neocities.org/collection/internet-stamps/!g/loona.gif"></a>
-			<img src="https://doqmeat.neocities.org/collection/internet-stamps/!g/orka.gif">
-			<img src="https://doqmeat.neocities.org/collection/internet-stamps/!g/ilovethemusic.gif" style="max-width:100%;">
+			<img src="/collection/internet-stamps/!g/matry.gif">
+			<a href="https://www.tumblr.com/pileofglass/708541131552669696/made-some-88x31-buttons-for-breakbeat-fans-feel?source=share" target="_blank"><img src="/collection/internet-stamps/!g/breakbeat.gif"></a>
+			<a href="https://www.tumblr.com/cartoonishvendor/710638657066926080/drippin-themed-88x31-buttons-middle-animation-is?source=share" target="_blank"><img src="/collection/internet-stamps/!g/drippin.gif"></a>
+			<img src="/collection/internet-stamps/!g/miku.gif">
+			<a href="https://plasticdino.neocities.org/graphics" target="_blank"><img src="/collection/internet-stamps/!g/loona.gif"></a>
+			<img src="/collection/internet-stamps/!g/orka.gif">
+			<img src="/collection/internet-stamps/!g/ilovethemusic.gif" style="max-width:100%;">
 		</div>
 
 		<footer>
