--- a/website/notebook/F2U/codes.html
+++ b/website/notebook/F2U/codes.html
@@ -40,7 +40,7 @@
 
 		<li>can be edited to your hearts content! go crazy even.
 		<li>can be used for anything that accepts HTML</li>
-		<li><b>credit is not mandatory</b> but a link back to my <a href="https://doqmeat.neocities.org/" target="_blank">website</a> is very appreciated!</li>
+		<li><b>credit is not mandatory</b> but a link back to my <a href="https://doqmeat.com/" target="_blank">website</a> is very appreciated!</li>
 
 		<h2 id="notebook"><a title="click for preview and code!" href="preview/notebook.html" target="_blank">notebook</a></h2>
 		<center><img src="preview/notebook.jpg" width="100%"><br><img src="preview/notebook2.jpg" width="100%"></center>
