--- a/website/sites/index.html
+++ b/website/sites/index.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>button wall</title>
-	<link rel="icon" type="image/x-icon" href="https://doqmeat.neocities.org/!g/pix/puter.gif">
+	<link rel="icon" type="image/x-icon" href="/!g/pix/puter.gif">
 	<link href="/fonts/stylesheet.css" rel="stylesheet" type="text/css" media="all">
 	<link href="index.css" rel="stylesheet" type="text/css" media="all">
 	<!-- tooltip shit -->
@@ -27,7 +27,7 @@
 		<p><img src="/!g/pix/kuma-macbook-60.png" align="right">a page dedicated to cool sites i've come across while web surfing!</p>
 		<p>here's my button and code if you'd like to link back to me ☆⌒(*＾-゜)v</p>
 		<img title="download it to your own server!" src="!g/doqmeat.png">
-		<textarea><a href="https://doqmeat.neocities.org" target="_blank"><img src="https://files.catbox.moe/xqrl8u.png" alt="doqmeat button"></a></textarea>
+		<textarea><a href="https://doqmeat.com" target="_blank"><img src="https://files.catbox.moe/xqrl8u.png" alt="doqmeat button"></a></textarea>
 		<h3><img src="/!g/pix/icon_k_love1.gif"> internet neighbors</h3>
 
 		<div class="neo">
