--- a/website/collection/internet-stamps/index.html
+++ b/website/collection/internet-stamps/index.html
@@ -7,7 +7,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>stamps &amp; blinkies</title>
-	<link rel="icon" type="image/x-icon" href="https://doqmeat.neocities.org/!g/pix/laptop.gif">
+	<link rel="icon" type="image/x-icon" href="/!g/pix/laptop.gif">
 	<link href="/fonts/stylesheet.css" rel="stylesheet" type="text/css" media="all">
 	<link href="internet-stamps.css" rel="stylesheet" type="text/css" media="all">
 	<!-- tooltip shit -->
