--- a/website/safe-spot/index.html
+++ b/website/safe-spot/index.html
@@ -9,7 +9,7 @@ coded by lil ol me (des)
 	<meta charset="UTF-8">
 	<title>safe spot</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="icon" type="image/x-icon" href="https://doqmeat.neocities.org/!g/pix/flowerpink.gif">
+	<link rel="icon" type="image/x-icon" href="/!g/pix/flowerpink.gif">
 	<link href="/fonts/stylesheet.css" rel="stylesheet" type="text/css" media="all">
 	<link href="/!f/snowflakes.css" rel="stylesheet" type="text/css" media="all">
 	<link href="index.css" rel="stylesheet" type="text/css" media="all">
