got a custom domain!ヾ(＠⌒ー⌒＠)ノwelcome doqmeat.com

--- a/website/home.html
+++ b/website/home.html
@@ -39,7 +39,7 @@ feel free to look around for any help you need :) just don't be THAT person and 
 
 		<header id="header">
 			<p>welcome to...</p>
-			<h1>doqmeat.neocities.org</h1>
+			<h1>doqmeat.com</h1>
 		</header>
 
 		<div id="theme-picker" class="box">
@@ -274,7 +274,7 @@ feel free to look around for any help you need :) just don't be THAT person and 
 			<p>and remember to <a class="outlink" href="https://awesomelytechie.com/dont-hotlink/" target="_blank">not hotlink</a></p>
 
 			<img src="sites/!g/doqmeat.png" alt="doqmeat button">
-			<textarea style="max-width:88px;height:35px;"><a href="https://doqmeat.neocities.org" target="_blank"><img src="https://files.catbox.moe/xqrl8u.png" alt="doqmeat"></a></textarea>
+			<textarea style="max-width:88px;height:35px;"><a href="https://doqmeat.com" target="_blank"><img src="https://files.catbox.moe/xqrl8u.png" alt="doqmeat"></a></textarea>
 		</div>
 
 		<div id="chatbox">
@@ -313,6 +313,8 @@ feel free to look around for any help you need :) just don't be THAT person and 
 		<img id="sticker24" class="deco" alt="">
 		<img id="sticker25" class="deco" alt="">
 		<img id="sticker26" class="deco" alt="">
+		<img id="sticker27" class="deco" alt="">
+		<img id="sticker28" class="deco" alt="">
 		<img id="fixed-1" alt="">
 		<img id="fixed-2" alt="">
 		<!--		wrapper end div-->
@@ -352,7 +354,7 @@ feel free to look around for any help you need :) just don't be THAT person and 
 			setTimeout(function() {
 				titleScroller(text.substr(1) + text.substr(0, 1));
 			}, 500);
-		}(" doqmeat ☆⌒(*＾-゜)v☆ "));
+		}(" doqmeat.com ☆⌒(*＾-゜)v☆ "));
 
 	</script>
 	<script src="!f/homepage-v3/last.fm.js">
