--- a/website/index.html
+++ b/website/index.html
@@ -10,7 +10,7 @@
 
 <head>
 	<meta charset="UTF-8">
-	<title>doqmeat</title>
+	<title>(o゜▽゜)o☆</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="icon" type="image/x-icon" href="favicon.gif">
 	<link href="!f/index-v3.css" rel="stylesheet" type="text/css" media="all">
@@ -90,7 +90,7 @@
 	<div id="top"></div>
 
 	<main>
-		<p>hello there! you're about to enter <span id="rainbow">doqmeat.neocities.org</span> </p>
+		<p>hello there! you're about to enter <br> <span id="rainbow">doqmeat.com</span></p>
 		<p>this website uses <u>javascript</u> and <u>iframes</u>. on rare occasions there will be <u>autoplay audio</u>, and discussions of <u>heavy topics</u>. there will be warnings for the latter.</p>
 		<p>some pages can be <b>very</b> IMG heavy and might require you to reload more than once for everything to load.</p>
 		<p class="hide"><b>homepage is compatible with mobile devices but i cannot guarantee that for every page on my site, sorry!</b></p>
@@ -100,7 +100,7 @@
 
 	<!--
 	<div id="cat">
-		<a title="shhhhhh he's sleeping! but you can still come in :)" href="/home.html" style="background:transparent"><img src="https://doqmeat.neocities.org/!g/deco/sleeping-cat.gif" alt="picture of a cat sleeping that links to homepage"></a>
+		<a title="shhhhhh he's sleeping! but you can still come in :)" href="/home.html" style="background:transparent"><img src="/!g/deco/sleeping-cat.gif" alt="picture of a cat sleeping that links to homepage"></a>
 	</div>
 -->
 
