some quick fixes on index n homepage

--- a/website/home.html
+++ b/website/home.html
@@ -96,10 +96,9 @@ feel free to look around for any help you need :) just don't be THAT person and 
 			<center><a href="https://user.xmission.com/~emailbox/catstuff.htm" title="img source!"><img src="/collection/internet-stamps/!g/timecat.png" alt="button that reads 'no time spent with a cat is wasted'" width="30%"></a></center>
 
 			<h4>notes:</h4>
-			<li>pages can be <b>IMG heavy</b> <small>you might need to reload twice in order for everything to load. <small>sorry...</small></small></li>
 			<li>recommended to view on a 1536px+ wide screen <i>but</i> most pages are responsive to your screen size :)</li>
-			<li>website uses <b>javascript</b> <small>(some pages might not work correctly without it)</small></li>
-			<li><b>not tested or recommended to view on mobile devices</b> though it should be viewable at least</li>
+			<li>some pages use <b>javascript</b> <small>(some pages might not work correctly without it)</small> and <b>iframes</b></li>
+			<li><b>not tested or recommended to view on mobile devices</b> though it should be viewable at the very least</li>
 		</div>
 
 		<div id="status" class="box;">
