--- a/website/home.html
+++ b/website/home.html
@@ -64,6 +64,7 @@ feel free to look around for any help you need :) just don't be THAT person and 
 			<a title="everything about the music i love is here!" href="/music"><img src="/!g/pix/sorahanamuu1.gif" alt=""> music</a>
 
 			<h3>misc</h3>
+			<a href="/projects" target="_blank"><img src="/!g/pix/sticky.gif" alt=""> web projects</a>
 			<a href="/masaaki-yuasa"><img src="/!g/pix/tv.gif"> masaaki yuasa watchlist</a>
 			<a href="/october-movies"><img src="/!g/pix/gaikotsu2.gif"> october movie log</a>
 			<a href="safe-spot/index.html"><img src="/!g/pix/flowerpink.gif" alt=""> safe spot</a>
@@ -76,13 +77,11 @@ feel free to look around for any help you need :) just don't be THAT person and 
 			<a href="https://my.cbox.ws/doqmeat" target="_blank" class="outlink"><img src="/!g/pix/msgbbl.gif"> chatbox</a>
 			<a href="/sitemap"><img src="/!g/pix/world.gif"> sitemap</a>
 
-
 			<h3>offsite</h3>
 			<a href="https://neocities.org/site/doqmeat" target="_blank" class="outlink"><img src="/!g/pix/catheadswing.gif"> neocities
 				profile</a>
-			<a href="https://github.com/doqmeat/doqmeat.neocities.org" target="_blank" class="outlink"><img src="/!g/pix/puter.gif"> github repository</a>
+			<a href="https://github.com/doqmeat/doqmeat.com" target="_blank" class="outlink"><img src="/!g/pix/puter.gif"> github repository</a>
 			<a title="doqmeat@gmail.com" href="mailto:doqmeat@gmail.com" target="_blank" class="outlink"><img src="/!g/pix/mail-sozaiya.gif" alt=""> contact e-mail</a>
-			<a href="https://doqmeat.github.io" class="outlink" target="_blank"><img src="/!g/pix/sticky.gif" alt=""> other projects</a>
 		</nav>
 
 		<div id="intro" class="box">
@@ -93,7 +92,9 @@ feel free to look around for any help you need :) just don't be THAT person and 
 
 			<p>this website will probably be an <a title="github issues" href="https://github.com/doqmeat/doqmeat.neocities.org/issues" target="_blank" class="outlink">endless work-in-progress</a> for quite a bit. meaning that i am <b>always</b> working on it and updating it. if anything looks broken, a quick cache clean should help! if not, then feel free to <a href="mailto:doqmeat@gmail.com">e-mail</a> me.</p>
 
-			<center><a href="https://user.xmission.com/~emailbox/catstuff.htm" title="img source!"><img src="/collection/internet-stamps/!g/timecat.png" alt="button that reads 'no time spent with a cat is wasted'" width="30%"></a></center>
+			<center><a href="https://user.xmission.com/~emailbox/catstuff.htm" title="img source!"><img src="/collection/internet-stamps/!g/timecat.png" alt="button that reads 'no time spent with a cat is wasted'" width="30%"></a>
+				<img src="/collection/internet-stamps/!g/borntodie.png" width="40%">
+			</center>
 
 			<h4>notes:</h4>
 			<li>recommended to view on a 1536px+ wide screen <i>but</i> most pages are responsive to your screen size :)</li>
@@ -124,7 +125,7 @@ feel free to look around for any help you need :) just don't be THAT person and 
 				fujimoto</p>
 			<p><span class="hl">watching:</span> dungeon meshi</p>
 			<p><span class="hl">listening to:</span> <span id="song">&#8987;</span></p>
-			<p><span class="hl">working on:</span> my apartment (‾◡◝) also studying</p>
+			<p><span class="hl">working on:</span> my apartment (‾◡◝), studying, <a href="/projects/learning-js/ebook.html">learning JS</a></p>
 			<p><span class="hl">coding/writing:</span> journal and planners blog post</p>
 			<p class="date">last updated on 23.mar.24</p>
 		</div>
@@ -155,7 +156,7 @@ feel free to look around for any help you need :) just don't be THAT person and 
 
 			<a href="https://loonathefanlisting.neocities.org/" target="_blank"><img src="/!g/web/fanlisting-cliques/loona50x50_8.png" alt="loona fanlisting"></a>
 
-			<a href="http://precious-memory.net/nature/flowers" target="_blank"><img src="/!g/web/fanlisting-cliques/flowers.gif"></a>
+			<a href="http://precious-memory.net/nature/flowers" target="_blank"><img src="/!g/web/fanlisting-cliques/flowers.gif" alt="flowers fanlisting"></a>
 
 			<a href="http://thirteenthfloor.altervista.org/blackcats" target="_blank"><img src="/!g/web/fanlisting-cliques/blackcats.png"></a>
 
@@ -338,6 +339,14 @@ feel free to look around for any help you need :) just don't be THAT person and 
 		<p>website coded with lots of love by des <img src="/!g/pix/catheart1.gif" alt="">
 			on the web since <b>april 11, 2023</b> <img src="/!g/pix/catroll.gif" alt="">
 			hosted on <a class="outlink" href="https://neocities.org/site/doqmeat" target="_blank">neocities</a></p>
+		<p> <img src="/sites/!g/doqmeat.png">
+			<a href="https://decolonizepalestine.com/" style="background:transparent"><img src="/collection/internet-stamps/!g/palestine.gif" alt="free palestine button"></a>
+			<img src="/collection/internet-stamps/!g/best%20viewed.jpg">
+			<img src="/collection/internet-stamps/!g/nop.gif">
+			<img src="/collection/internet-stamps/!g/dontfeedai.gif">
+			<img src="/collection/internet-stamps/!g/antinft.png">
+			<a href="https://yesterweb.org/no-to-web3/" style="background:transparent"><img src="/collection/internet-stamps/!g/yesterweb-saynotoweb3.gif"></a>
+		</p>
 	</footer>
 
 	<!--	music player -->
