--- a/website/index.html
+++ b/website/index.html
@@ -94,14 +94,7 @@
 		<p>some pages can be <b>very</b> IMG heavy and might require you to reload more than once for everything to load.</p>
 		<p class="hide"><b>homepage is compatible with mobile devices but i cannot guarantee that for every page on my site, sorry!</b></p>
 		<p>this is a personal website made for my own enjoyment. with that said, have fun browsing!</p>
-		<p>contact me @ <a href="mailto:doqmeat@gmail.com">doqmeat@gmail.com</a></p>
 	</main>
-
-	<!--
-	<div id="cat">
-		<a title="shhhhhh he's sleeping! but you can still come in :)" href="/home.html" style="background:transparent"><img src="/!g/deco/sleeping-cat.gif" alt="picture of a cat sleeping that links to homepage"></a>
-	</div>
--->
 
 	<div id="chatbox">
 		<h3>chatbox</h3>
@@ -150,31 +143,15 @@
 
 		<!-- melonland surf -->
 		<object id="melonland-surf-club" data="https://melonland.net/surf-badge.svg?fill=#c999f0" type="image/svg+xml" style="width: 100px; height: 100px;"></object>
-
 	</div>
 
-	<div id="cred">
-		<img src="/!g/div/scribble-rainbow.gif">
-		<p><b>credit:</b>
-			background from pmmm rebellion
+	<footer>
+		<p><b>credit:</b> background from pmmm rebellion
 			<img src="!g/pix/1leaf.png">
 			lace borders by <a href="https://sorahana.ciao.jp/">sorahana</a>
 			<img src="!g/pix/1leaf.png">
 			<a href="http://www.mf2fm.com/rv/dhtmlrainbow.php">blinking JS text effect</a>
 		</p>
-		<img src="/!g/div/scribble-rainbow.gif">
-	</div>
-
-	<footer>
-		<img src="/sites/!g/doqmeat.png">
-		<a href="https://decolonizepalestine.com/" style="background:transparent"><img src="/collection/internet-stamps/!g/palestine.gif"></a>
-		<img src="/collection/internet-stamps/!g/best%20viewed.jpg">
-		<img src="/collection/internet-stamps/!g/nop.gif">
-		<img src="/collection/internet-stamps/!g/dontfeedai.gif">
-		<img src="/collection/internet-stamps/!g/antinft.png">
-		<a href="https://yesterweb.org/no-to-web3/" style="background:transparent"><img src="/collection/internet-stamps/!g/yesterweb-saynotoweb3.gif"></a>
-		<br>
-		<img src="/collection/internet-stamps/!g/borntodie.png">
 	</footer>
 
 	<div id="bottom"></div>
