--- a/website/music/listening-log/index.html
+++ b/website/music/listening-log/index.html
@@ -41,6 +41,7 @@
 		<p>these logs are basically a more fleshed out version of my <a href="https://rateyourmusic.com/doqmeat" target="_blank">RYM</a> yearly logs</p>
 		<p><b>21.mar.24</b> - i used to do these on a monthly basis, but because i have less free time now i have been sadly listening to less new stuff compared to previously <img src="/!g/pix/sad.gif" alt=""> because of this i will be separating them based on the seasons of the year</p>
 		<h3>pages</h3>
+		<a href="2024/spring.html" target="_parent">spring 2024</a>
 		<a href="2024/winter.html" target="_parent">winter 2024</a>
 		<a href="2023/12.html" target="_parent">december 2023</a>
 		<a href="2023/11.html" target="_parent">november 2023</a>
