--- a/website/home.html
+++ b/website/home.html
@@ -2,7 +2,9 @@
 <html lang="en">
 <!-- 
 coded with love by des!
-started on nov 15 2023 / finished on dec 14 2023!
+-
+homepage v3 started on nov 15 2023 / finished on dec 14 2023!
+-
 feel free to look around for any help you need :) just don't be THAT person and take the entire code for your site... you're free to take bits of my code but pls let me know before hand! i might be able to help you out :-)
  -->
 
@@ -61,7 +63,7 @@ feel free to look around for any help you need :) just don't be THAT person and 
 			<a href="/shrines"><img src="/!g/pix/heart2.gif" alt=""> shrines</a>
 			<a href="/collection"><img src="/!g/pix/pics.gif" alt=""> collections</a>
 			<a href="/vgs"><img src="/!g/pix/vgs.gif" alt=""> gaming log</a>
-			<a title="everything about the music i love is here!" href="/music"><img src="/!g/pix/sorahanamuu1.gif" alt=""> music</a>
+			<a title="everything about the music i love!" href="/music"><img src="/!g/pix/sorahanamuu1.gif" alt=""> music</a>
 
 			<h3>misc</h3>
 			<a href="/projects" target="_blank"><img src="/!g/pix/sticky.gif" alt=""> web projects</a>
@@ -125,14 +127,14 @@ feel free to look around for any help you need :) just don't be THAT person and 
 				fujimoto</p>
 			<p><span class="hl">watching:</span> dungeon meshi</p>
 			<p><span class="hl">listening to:</span> <span id="song">&#8987;</span></p>
-			<p><span class="hl">working on:</span> my apartment (‾◡◝), studying, <a href="/projects/learning-js/ebook.html">learning JS</a></p>
+			<p><span class="hl">working on:</span> my apartment (‾◡◝), university, <a href="/projects/learning-js/ebook.html">learning JS</a></p>
 			<p><span class="hl">coding/writing:</span> journal and planners blog post</p>
-			<p class="date">last updated on 23.mar.24</p>
+			<p class="date">last updated on 24.mar.24</p>
 		</div>
 
 		<div id="updates" class="box">
 			<h2>updates</h2>
-			<li>24.mar.24 - added a <b>custom domain</b>! <img src="/!g/pix/cathappy.gif"> + added <a href="/projects">web projects</a> page <small>previously hosted on github pages</small></li>
+			<li>24.mar.24 - custom domain is here @ <b>doqmeat.com</b>! <img src="/!g/pix/cathappy.gif"> + added <a title="previously hosted on github pages" href="/projects">web projects</a> + created <a href="/music/listening-log/2024/spring.html">spring listening log</a></li>
 			<li>23.mar.24 - new journal log: <a href="/journal">warmth</a> + updated <a href="/photobook">photobook</a> + featured cat</li>
 			<li>21.mar.24 - updated <a href="/vgs">gaming log</a> with <i>paranormasight</i> and other logs + <a href="/scrapbook/2024#mar">march scrapbook!</a></li>
 			<li>17.mar.24 - big update to <a href="/music/listening-log/2024/winter.html">listening log</a> before winter ends officially!</li>
