button wall quick fix

--- a/website/sites/index.html
+++ b/website/sites/index.html
@@ -175,7 +175,7 @@
 			<a title="audreywasadiver" href="https://audreywasadiver.neocities.org/" target="_blank"><img src="!g/audreywasadiver.gif" alt="audreywasadriver"></a>
 			<a title="myblace" href="https://myblace.one" target="_blank"><img src="!g/myblace.gif" alt="myblace"></a>
 			<a href="https://alphacentauri.neocities.org/" title="alphacentauri" target="_blank"><img src="!g/alphacentauri.gif" alt="alphacentauri"></a>
-			<a title="cloverbell - one of my fav websites ever omg" href="https://cloverbell.neocities.org/" target="_blank"><img src="https://cloverbell.neocities.org/n_n/cloverbell.gif"></a>
+			<a title="cloverbell - one of my fav websites ever omg" href="https://cloverbell.neocities.org/" target="_blank"><img src="!g/cloverbell.gif"></a>
 			<a title="johndavis" href="https://johndavid.neocities.org/" target="_blank"><img src="!g/johndavid.webp"></a>
 			<a title="traumagotchi" href="https://traumagotchi.neocities.org" target="_blank"><img src="!g/traumagotchi.gif" alt="traumagotchi"></a>
 			<a title="fairygore - magical site! it makes me feel like i am lost in a forest" href="https://fairygore.neocities.org" target="_blank"><img src="!g/fairygore.png" alt="fairygore"></a>
