--- a/website/notebook/links/credit.html
+++ b/website/notebook/links/credit.html
@@ -32,6 +32,8 @@
 		<a href="https://nekonokuni.neocities.org" target="_blank"><img src="/sites/!g/nekonokuni.gif"></a>
 		<a href="https://incessantpain.neocities.org/" target="_blank"><img src="/sites/!g/incessantpain.gif"></a>
 		<a href="https://faegardens333.neocities.org/" target="_blank"><img src="/sites/!g/faegardens333.gif"></a>
+		<a href="https://pomelo.lol/" target="_blank"><img src="/sites/!g/pomelo.gif"></a>
+		<a href="https://cloverbell.neocities.org/" target="_blank"><img src="/sites/!g/cloverbell.gif"></a>
 
 		<h2>stuff used in my website</h2>
 
