--- a/website/notebook/links/index.html
+++ b/website/notebook/links/index.html
@@ -203,6 +203,7 @@
 
 		<h3 id="F2U">sites with F2U materials</h3>
 
+		<li><a href="https://www.flickr.com/photos/kawaiiscans/albums" target="_blank">kawaiiscans</a> - scans of cute notepads</li>
 		<li><a href="https://foollovers.com/" target="_blank">foollovers.com</a> - site with pixels, bgs, dividers, templates, etc</li>
 		<li><a href="https://mothcub.neocities.org/pixels" target="_blank">mothclub</a>'s pixels!</li>
 		<li><a href="http://cute.lolipop.jp/" target="_blank">cute.lolipop.jp</a> - cute pixel materials</li>
@@ -227,6 +228,7 @@
 
 		<h3 id="archives">collections</h3>
 
+		<li><a href="https://gifcities.org" target="_blank">gifcities.org</a> - hosted by internet archive with tons of old gifs from geocities!</li>
 		<li><a href="https://cyber.dabamos.de/88x31/" target="_blank">cyber.dabamos.de</a> - buttons from the 90's and 2000's</li>
 		<li><a href="https://homuhoard.neocities.org" target="_blank">homuhoard</a> - archive with favicons, pixels, stamps etc</li>
 		<li><a href="https://graphic.neocities.org" target="_blank">bonnibel's graphic collection</a> - tons of pixels, containers, dividers</li>
