added site to button wall!

--- a/website/sites/index.html
+++ b/website/sites/index.html
@@ -180,6 +180,7 @@
 			<a title="traumagotchi" href="https://traumagotchi.neocities.org" target="_blank"><img src="!g/traumagotchi.gif" alt="traumagotchi"></a>
 			<a title="fairygore - magical site! it makes me feel like i am lost in a forest" href="https://fairygore.neocities.org" target="_blank"><img src="!g/fairygore.png" alt="fairygore"></a>
 			<a title="ames" href="https://tthumbelina.neocities.org/" target="_blank"> <img src="!g/tthumbelina.GIF"></a>
+			<a href="hidingspot.neocities.org" target="_blank"><img src="https://hidingspot.neocities.org/imgs/hidingspot-sitebutton.gif" alt="hidingspot's site button"></a>
 		</div>
 
 		<h4>sites without buttons (<a href="mailto:doqmeat@gmail.com" target="_blank">e-mail me</a> if you do have one!)</h4>
@@ -244,9 +245,10 @@
 			<a href="https://ribo.zone/" target="_blank"><img src="!g/ribose.gif" alt="ribo.zone"></a>
 			<a title="such a cute site with lots of personality" href="https://eggsandmint.neocities.org" target="_blank"><img src="!g/eggsandmint.png" alt="eggsandmint"></a>
 			<a href="https://shrimpfriedeggs.neocities.org/"><img src="https://shrimpfriedeggs.neocities.org/art/mybutton.gif"></a>
+			<a title="velvet blue" href="https://humanityisnotbeautiful.neocities.org"><img src="https://files.catbox.moe/vltthb.png" alt="Velvet Blue"></a>
 		</div>
+
 		<a href="https://mewmiu.blog.fc2.com" target="_blank"><img src="https://blog-imgs-169.fc2.com/m/e/w/mewmiu/stamp.png"></a>
-		<a title="velvet blue" href="https://humanityisnotbeautiful.neocities.org"><img src="https://files.catbox.moe/vltthb.png" alt="Velvet Blue"></a>
 
 		<p><a href="https://neustadt.fr/">neustadt.fr</a></p>
 
