added "lost" albums to CDs page

--- a/website/music/cds.html
+++ b/website/music/cds.html
@@ -146,20 +146,6 @@
 		<!-- 			column 2 -->
 		<div class="column">
 
-			<div class="cd"><img src="!g/fav-albums/spacetimeevents.jpg">
-				<div class="hov">
-					<div class="caption">
-						<h3>空​間​、​事​情​、​時​間​、​事​象​。(space, circumstances, time, and events.) - kinoue64</h3>
-						<p><span class="fav"></span></p>
-						<p>woke up at 7am to get this!!!!! super worth it</p>
-						<p><b>24.feb.24</b> update: THIS ALBUM GOT LOST IN THE MAIL......................................... well. a moment of silence please <img src="/!g/pix/sad.gif"></p>
-						<p><span class="placeholder"></span></p>
-						<p><span class="ver"> limited edition</span></p>
-						<p><span class="date"> <s>08.nov.23</s></span></p>
-					</div>
-				</div>
-			</div>
-
 			<div class="cd"><img src="/shrines/siinamota/ikiru/cover-front.jpg">
 				<div class="hov">
 					<div class="caption">
@@ -393,10 +379,17 @@
 		<!-- 		end div container -->
 	</div>
 
+	<div id="lost">
+		<h2><img src="/!g/pix/wing1.gif" alt=""> lost in the mail <img src="/!g/pix/wing2.gif" alt=""></h2>
+		<h3>kinoue64's 空​間​、​事​情​、​時​間​、​事​象​。(space, circumstances, time, and events.)</h3>
+		<p>purchased limited edition on 08.nov.23</p>
+		<p>last seen in NY</p>
+	</div>
+
 	<div id="home"><a class="i" title="go back to music page" href="/music"><img src="/!g/deco/cd.gif"></a></div>
 
 	<footer>
-		imgs on this page have been scanned by me unless stated otherwise! <img src="/!g/pix/musicnote1.gif"> <b>last updated on 24.feb.24</b>
+		imgs on this page have been scanned by me unless stated otherwise! <img src="/!g/pix/musicnote1.gif"> <b>last updated on 25.mar.24</b>
 		<br>
 		<b>credit:</b> background is from yukika's soul lady photobook! / <a href="/notebook/links/fonts.html">fonts</a> used: natsuzemi, gaegu, spirit
 		<br>
