--- a/website/home.html
+++ b/website/home.html
@@ -66,7 +66,7 @@ feel free to look around for any help you need :) just don't be THAT person and 
 			<a title="everything about the music i love!" href="/music"><img src="/!g/pix/sorahanamuu1.gif" alt=""> music</a>
 
 			<h3>misc</h3>
-			<a href="/projects" target="_blank"><img src="/!g/pix/sticky.gif" alt=""> web projects</a>
+			<a href="/projects"><img src="/!g/pix/sticky.gif" alt=""> web projects</a>
 			<a href="/masaaki-yuasa"><img src="/!g/pix/tv.gif"> masaaki yuasa watchlist</a>
 			<a href="/october-movies"><img src="/!g/pix/gaikotsu2.gif"> october movie log</a>
 			<a href="safe-spot/index.html"><img src="/!g/pix/flowerpink.gif" alt=""> safe spot</a>
@@ -134,7 +134,8 @@ feel free to look around for any help you need :) just don't be THAT person and 
 
 		<div id="updates" class="box">
 			<h2>updates</h2>
-			<li>24.mar.24 - custom domain is here @ <b>doqmeat.com</b>! <img src="/!g/pix/cathappy.gif"> + added <a title="previously hosted on github pages" href="/projects">web projects</a> + created <a href="/music/listening-log/2024/spring.html">spring listening log</a></li>
+			<li>25.mar.24 - new <a title="custom domain" href="/journal">journal</a> log!</li>
+			<li>24.mar.24 - added <a title="previously hosted on github pages" href="/projects">web projects</a> + created <a href="/music/listening-log/2024/spring.html">spring listening log</a></li>
 			<li>23.mar.24 - new journal log: <a href="/journal">warmth</a> + updated <a href="/photobook">photobook</a> + featured cat</li>
 			<li>21.mar.24 - updated <a href="/vgs">gaming log</a> with <i>paranormasight</i> and other logs + <a href="/scrapbook/2024#mar">march scrapbook!</a></li>
 			<li>17.mar.24 - big update to <a href="/music/listening-log/2024/winter.html">listening log</a> before winter ends officially!</li>
