--- a/website/index.html
+++ b/website/index.html
@@ -10,7 +10,7 @@
 
 <head>
 	<meta charset="UTF-8">
-	<title>(o゜▽゜)o☆</title>
+	<title>(o゜▽゜)o☆ doqmeat</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="icon" type="image/x-icon" href="favicon.gif">
 	<link href="!f/index-v3.css" rel="stylesheet" type="text/css" media="all">
@@ -146,7 +146,7 @@
 	</div>
 
 	<footer>
-		<p><b>credit:</b> background from pmmm rebellion
+		<p><b>credit:</b> background from PMMM rebellion
 			<img src="!g/pix/1leaf.png">
 			lace borders by <a href="https://sorahana.ciao.jp/">sorahana</a>
 			<img src="!g/pix/1leaf.png">
